# extract-discord-token

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_and_check.yml
clib/: Cargo.toml
clib/src/: lib.rs
src/: electron_extract.rs  error.rs  main.rs
token-extractor/: Cargo.toml
token-extractor/src/: decrypt_token.rs  lib.rs  string_key.rs
