[package]
name = "token-extractor"
version = "1.0.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.1"
base64 = "0.21.0"
db-key = "0.0.5"
leveldb = "0.8.6"
serde_json = "1.0.91"

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
]

[profile.release]
strip = true
lto = true